# hse_mlops_hw2

./: Dockerfile  README.md  docker-compose.yml  fastapi.Dockerfile  mlflow.Dockerfile  pyproject.toml
data/: datasets.dvc
data/.minio.sys/: format.json
data/datasets/: titanic.dvc
minio_data/.minio.sys/: format.json
src/: main.py
src/app/: models_setup.py  utils.py
